force-app/main/default/objects/SalesGoal__c/SalesGoal__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <label>Sales Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>