force-app/main/default/objects/SalesGoal__c/fields/Actual_Finish__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish__c</fullName>
    <label>Actual Finish</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>