force-app/main/default/objects/SalesGoal__c/fields/Actual_Finish_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish_Rate__c</fullName>
    <label>Actual Finish Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>