force-app/main/default/objects/SalesGoal__c/fields/Amounts_Text__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Text__c</fullName>
    <formula>TEXT( Amounts__c )</formula>
    <label>Amounts Text</label>
    <type>Text</type>
</CustomField>