force-app/main/default/objects/SalesGoal__c/fields/CompletedQuantities__c.field-meta.xml
<CustomField>
    <fullName>CompletedQuantities__c</fullName>
    <label>Completed Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>