force-app/main/default/objects/SalesGoal__c/fields/CompletedSales__c.field-meta.xml
<CustomField>
    <fullName>CompletedSales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>