force-app/main/default/objects/SalesGoal__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>