force-app/main/default/objects/SalesGoal__c/fields/DataIndexCustomerF__c.field-meta.xml
<CustomField>
    <fullName>DataIndexCustomerF__c</fullName>
    <formula>DataIndexDayF__c+ &apos;_&apos; + CASESAFEID(Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Index Customer F</label>
    <type>Text</type>
</CustomField>