force-app/main/default/objects/SalesGoal__c/fields/DataIndexDayF__c.field-meta.xml
<CustomField>
    <fullName>DataIndexDayF__c</fullName>
    <formula>DataIndexF__c  + &apos;_&apos; +  TEXT(Day__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Index Day F</label>
    <type>Text</type>
</CustomField>