force-app/main/default/objects/SalesGoal__c/fields/DataIndexF__c.field-meta.xml
<CustomField>
    <fullName>DataIndexF__c</fullName>
    <formula>CASESAFEID(Store__c)  + &apos;_&apos; +   CASESAFEID(ResponsiblePerson__c)  + &apos;_&apos; + TEXT(ProductLine__c) + &apos;_&apos; +  CASESAFEID(Product__c)  + &apos;_&apos; +  TEXT(Year__c)  + &apos;_&apos; +  TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Index F</label>
    <type>Text</type>
</CustomField>