force-app/main/default/objects/SalesGoal__c/fields/EndingTime__c.field-meta.xml
<CustomField>
    <fullName>EndingTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>