force-app/main/default/objects/SalesGoal__c/fields/Inspection_Task_Jun__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Task_Jun__c</fullName>
    <label>Inspection Task Jun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>