force-app/main/default/objects/SalesGoal__c/fields/Inspection_Task_Mar__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Task_Mar__c</fullName>
    <label>Inspection Task Mar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>