force-app/main/default/objects/SalesGoal__c/fields/IsSplit__c.field-meta.xml
<CustomField>
    <fullName>IsSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Split</label>
    <type>Checkbox</type>
</CustomField>