force-app/main/default/objects/SalesGoal__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>