force-app/main/default/objects/SalesGoal__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>