force-app/main/default/objects/SalesGoal__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsible Person</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Responsible_Person__c.Shop_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Store__c</valueField>
        </filterItems>
        <filterItems>
            <field>Responsible_Person__c.RecordType__c</field>
            <operation>equals</operation>
            <value>促销员</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>Sales Goals</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>