force-app/main/default/objects/SalesGoal__c/fields/ResponsiblePersonId__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePersonId__c</fullName>
    <label>Responsible Person Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>