force-app/main/default/objects/SalesGoal__c/fields/Sales_Region_Other__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Other__c</fullName>
    <label>Sales Region Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>