force-app/main/default/objects/SalesGoal__c/fields/SameMonth__c.field-meta.xml
<CustomField>
    <fullName>SameMonth__c</fullName>
    <formula>AND(TEXT(Year__c) = TEXT(YEAR(TODAY())), TEXT(Month__c) = TEXT(MONTH(TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Month</label>
    <type>Checkbox</type>
</CustomField>