force-app/main/default/objects/SalesGoal__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Sales Goals</relationshipLabel>
    <relationshipName>Sales_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>