force-app/main/default/objects/SalesGoal__c/fields/Store_Coverage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Store_Coverage_Rate__c</fullName>
    <label>Store Coverage Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>