force-app/main/default/objects/SalesGoal__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <label>StoreId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>