force-app/main/default/objects/SalesGoal__c/fields/TargetDay__c.field-meta.xml
<CustomField>
    <fullName>TargetDay__c</fullName>
    <label>Target Day</label>
    <type>Date</type>
</CustomField>