force-app/main/default/objects/SalesGoal__c/recordTypes/Customer_Target.recordType-meta.xml
<RecordType>
    <fullName>Customer_Target</fullName>
    <active>true</active>
    <label>Customer Target</label>
</RecordType>