force-app/main/default/objects/SalesGoal__c/recordTypes/Human_Effect.recordType-meta.xml
<RecordType>
    <fullName>Human_Effect</fullName>
    <active>true</active>
    <label>人效</label>
</RecordType>