force-app/main/default/objects/SalesGoal__c/recordTypes/Key_Channel_Store_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Key_Channel_Store_Coverage</fullName>
    <active>true</active>
    <label>重点渠道门店覆盖率</label>
</RecordType>