force-app/main/default/objects/SalesGoal__c/recordTypes/Key_Products_Sell_Out.recordType-meta.xml
<RecordType>
    <fullName>Key_Products_Sell_Out</fullName>
    <active>true</active>
    <label>重点产品Sellout</label>
</RecordType>