force-app/main/default/objects/SalesGoal__c/recordTypes/Month.recordType-meta.xml
<RecordType>
    <fullName>Month</fullName>
    <active>true</active>
    <label>Month</label>
</RecordType>