force-app/main/default/objects/SalesGoal__c/recordTypes/Region_Target_Key_Model.recordType-meta.xml
<RecordType>
    <fullName>Region_Target_Key_Model</fullName>
    <active>true</active>
    <label>Region Target - Key Model</label>
</RecordType>