force-app/main/default/objects/SalesGoal__c/recordTypes/Region_Target_Product_Line.recordType-meta.xml
<RecordType>
    <fullName>Region_Target_Product_Line</fullName>
    <active>true</active>
    <label>Region Target - Product Line</label>
</RecordType>