force-app/main/default/objects/SalesGoal__c/recordTypes/Sell_Out_Amount.recordType-meta.xml
<RecordType>
    <fullName>Sell_Out_Amount</fullName>
    <active>true</active>
    <label>Sellout金额</label>
</RecordType>