force-app/main/default/objects/SalesGoal__c/recordTypes/Shop_Efficiency.recordType-meta.xml
<RecordType>
    <fullName>Shop_Efficiency</fullName>
    <active>true</active>
    <label>店效</label>
</RecordType>