force-app/main/default/objects/SalesGoal__c/recordTypes/X1000_Sellout.recordType-meta.xml
<RecordType>
    <fullName>X1000_Sellout</fullName>
    <active>true</active>
    <label>$1000+Sellout</label>
</RecordType>