force-app/main/default/objects/SalesGoal__c/recordTypes/X500_Sellout.recordType-meta.xml
<RecordType>
    <fullName>X500_Sellout</fullName>
    <active>true</active>
    <label>$500+Sellout</label>
</RecordType>