force-app/main/default/objects/SalesGoal__c/recordTypes/X_Plan_Task.recordType-meta.xml
<RecordType>
    <fullName>X_Plan_Task</fullName>
    <active>true</active>
    <label>X Plan Task</label>
</RecordType>