force-app/main/default/objects/SalesGoal__c/validationRules/Can_Not_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Update</fullName>
    <active>true</active>
    <description>目标日期已过不能更改任意字段</description>
    <errorConditionFormula>IF( ISCHANGED( CompletedSales__c ) , 
false, 
AND(NOT(ISNEW()),  EndingTime__c  &lt; NOW(),  IsActive__c ))</errorConditionFormula>
    <errorMessage>The sales target date has passed and the record cannot be changed!</errorMessage>
</ValidationRule>