force-app/main/default/objects/SalesGoal__c/validationRules/EndDateMustGreaterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateMustGreaterStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL(EndingTime__c ) &amp;&amp; EndingTime__c &lt; StartTime__c</errorConditionFormula>
    <errorMessage>End Date Must be later than Start Date</errorMessage>
</ValidationRule>