force-app/main/default/objects/SalesGoal__c/validationRules/Just_Can_Update_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Just_Can_Update_Amount</fullName>
    <active>true</active>
    <description>已经激活的目标只能改金额
!(新建 || !激活状态 || 激活状态 &amp;&amp; (激活状态改变 || 不更改维度))</description>
    <errorConditionFormula>!OR(
    ISNEW(),
    !IsActive__c,
    AND(
        IsActive__c,
        OR(
            ISCHANGED(IsActive__c),
            !OR(
                ISCHANGED( Year__c ), 
                ISCHANGED( Month__c ),
                ISCHANGED( Day__c ),
                ISCHANGED( ProductLine__c ),
                ISCHANGED( Product__c ),
                ISCHANGED( Store__c ),
                ISCHANGED( ResponsiblePerson__c )
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>Sales target in progress, only amount can be changed or deactive!</errorMessage>
</ValidationRule>