force-app/main/default/objects/SalesGoal__c/validationRules/OnlyMonthSplit.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyMonthSplit</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName != &apos;Month&apos; &amp;&amp; IsSplit__c</errorConditionFormula>
    <errorMessage>Only Month Target Can Split!</errorMessage>
</ValidationRule>