force-app/main/default/objects/SalesGoal__c/validationRules/QualitiesOnlyIndonesia.validationRule-meta.xml
<ValidationRule>
    <fullName>QualitiesOnlyIndonesia</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Product__r.sales_region__c, &apos;Hisense Indonesia&apos;)
&amp;&amp;  Quantities__c != NULL</errorConditionFormula>
    <errorDisplayField>Quantities__c</errorDisplayField>
    <errorMessage>Only Indonesia Can set qualities</errorMessage>
</ValidationRule>