force-app/main/default/objects/SalesGoal__c/validationRules/SplitedReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>SplitedReadOnly</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(IsSplit__c)  &amp;&amp; !ISNew()</errorConditionFormula>
    <errorMessage>Splited target can not update</errorMessage>
</ValidationRule>