force-app/main/default/objects/SalesGoal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Promoter__c</columns>
    <columns>ProductLine__c</columns>
    <columns>Product__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Day__c</columns>
    <columns>TargetDay__c</columns>
    <columns>Amounts__c</columns>
    <columns>CompletedSales__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>