force-app/main/default/objects/SalesGoal__c/listViews/Asean.listView-meta.xml
<ListView>
    <fullName>Asean</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Record_Type_Id__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Customer__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesGoal__c.Sell_Out_Amount,SalesGoal__c.Human_Effect,SalesGoal__c.Shop_Efficiency,SalesGoal__c.Key_Products_Sell_Out,SalesGoal__c.Key_Channel_Store_Coverage</value>
    </filters>
    <label>Asean</label>
</ListView>